Bug 86573 - Impress does not show pictures anymore
Summary: Impress does not show pictures anymore
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.3 Daily
Hardware: x86-64 (AMD64) Linux (All)
: medium critical
Assignee: Not Assigned
URL:
Whiteboard: target:4.5.0 target:4.4.0 target:4.3.5
Keywords: regression
Depends on:
Blocks:
 
Reported: 2014-11-22 13:10 UTC by Jean-Baptiste Faure
Modified: 2014-11-25 23:39 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jean-Baptiste Faure 2014-11-22 13:10:37 UTC
Steps to reproduce:
- open the attachment 109826 [details] from bug 46447 (comment #190)
- pictures are visible in the left sidebar (slides) but not in normal view.
- in slideshow mode, pictures are not visible.

- if I remove a picture and insert it back, the save the file, the picture is visible in edition mode but not anymore when I reopen the file.

It works as expected in LibreOffice 4.2.6.3 but not in version 4.3.5.0.0+ and 4.4.0.0.beta1+
Tested under Ubuntu 14.10 x86-64.

Best regards. JBF
Comment 1 Jean-Baptiste Faure 2014-11-22 13:13:46 UTC
Set keyword regression because it works as expected in LO 4.2.6.3

No dataloss because the pictures are still there in the file.

Best regards. JBF
Comment 2 Jean-Baptiste Faure 2014-11-22 16:04:08 UTC
I am sure that this regression is very recent. Indeed I tested attachment 109534 [details] from bug 86318 on 2014-11-15 and the animated gif on the second slide was correctly shown in version 4.4.0.0.alpha2+.

@Zolnai Tamas: something for you? Could be possible that the issue comes from the commit https://gerrit.libreoffice.org/gitweb?p=core.git;a=commit;h=286e2f5c6ec829bc0987b1be7016699f7ef03e5e ?

Best regards. JBF
Comment 3 Commit Notification 2014-11-22 18:53:07 UTC
Zolnai Tamás committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f0b28806eebb1477066d44de49b5d1d61a8e84cf

fdo#86573: Impress does not show pictures anymore

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Tamás Zolnai 2014-11-22 19:09:19 UTC
(In reply to Jean-Baptiste Faure from comment #2)
> I am sure that this regression is very recent. Indeed I tested attachment
> 109534 [details] from bug 86318 on 2014-11-15 and the animated gif on the
> second slide was correctly shown in version 4.4.0.0.alpha2+.
> 
> @Zolnai Tamas: something for you? Could be possible that the issue comes
> from the commit
> https://gerrit.libreoffice.org/gitweb?p=core.git;a=commit;
> h=286e2f5c6ec829bc0987b1be7016699f7ef03e5e ?
> 
> Best regards. JBF

Hi,

Thanks for the fast feedback. Yeah, that was the wrong commit. Huh, this image rendering seems to be a sensitive part of LO, I should be more careful.
I fixed it in master and will push the fix to all other branches, where necessary.

Tamás
Comment 6 Jean-Baptiste Faure 2014-11-22 21:47:49 UTC
Thank you very much for the quick fix. Build of LO 4.4 in progress. :-)

Best regards. JBF
Comment 7 Jean-Baptiste Faure 2014-11-23 05:56:55 UTC
Verified fixed on Version: 4.4.0.0.beta1+
Build ID: eff1a2afdc5763abda103bea7dbc33c8aa20c724
built at home under Ubuntu 14.10 x86-64.

Best regards. JBF
Comment 9 Jean-Baptiste Faure 2014-11-23 16:37:56 UTC
Set back version to 4.3 daily because the bug has been found in 4.3.5.0.0+, not only in 4.4.0.0.beta1. There is a commit for branch 4.3.

Best regards. JBF