svx/source/svdraw/svdograf.cxx
@@ -562,7 +562,7 @@ OUString SdrGrafObj::GetGrafStreamURL() const
 
 void SdrGrafObj::ForceSwapIn() const
 {
-    if( mbIsPreview )
+    if( mbIsPreview && pGraphic->HasUserData() )
     {
         // removing preview graphic
         const OUString aUserData( pGraphic->GetUserData() );
@@ -1347,8 +1347,16 @@ IMPL_LINK( SdrGrafObj, ImpSwapHdl, GraphicObject*, pO )
                         aGraphic, aUserData, *pStream,
                         GRFILTER_FORMAT_DONTKNOW, NULL, 0, pFilterData.get()))
                     {
+                        const OUString aNewUserData( pGraphic->GetUserData() );
                         pGraphic->SetGraphic( aGraphic );
-                        pGraphic->SetUserData();
+                        if( mbIsPreview )
+                        {
+                            pGraphic->SetUserData(aNewUserData);
+                        }
+                        else
+                        {
+                            pGraphic->SetUserData();
+                        }
 
                         // Graphic successfully swapped in.
                         pRet = GRFMGR_AUTOSWAPSTREAM_LOADED;
